<resources>
    <string name="app_name">nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="textContent">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb  </string>
    <string name="Published">21 мая в 18:36</string>
    <string name="Author">Нетология. Университет интернет-профессий будущего</string>
    <string name="numberLikes">10</string>
    <string name="numberShare">5</string>
    <string name="numberViews">19</string>
    <string name="post_text">post_text</string>
    <string name="description_post_like">description_post_like</string>
    <string name="post_texts">Что у Вас нового?</string>
    <string name="url_Video">Введите ссылку на видео</string>
</resources>