<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.NewPostActivity">

    <EditText
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:hint="@string/post_texts"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomAppBar"
        tools:layout_editor_absoluteX="-16dp" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        tools:ignore="BottomAppBar,MissingConstraints" />

    <ImageView
        android:id="@+id/btmSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_anchor="@id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar"
        app:srcCompat="@drawable/save_avatars"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />


    <TextView
        android:id="@+id/textAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="100dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/Author"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/imgAvatar"
        app:layout_constraintTop_toTopOf="@id/imgAvatar" />

    <ImageView
        android:id="@+id/addVideoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/contentView"
        app:layout_constraintEnd_toStartOf="@+id/btmSave"
        app:layout_constraintStart_toEndOf="@+id/textAuthor"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar"
        app:srcCompat="@drawable/add_avatars" />

    <EditText
        android:id="@+id/urlVideo"
        android:layout_width="244dp"
        android:layout_height="48dp"
        android:background="@color/cardview_dark_background"
        android:gravity="start|top"
        android:hint="@string/url_Video"
        android:inputType="textMultiLine"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomAppBar"
        app:layout_constraintVertical_bias="0.334" />


</androidx.constraintlayout.widget.ConstraintLayout>