<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />


    <TextView
        android:id="@+id/textAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/Author"
        app:layout_constraintBottom_toTopOf="@id/textPublished"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/imgAvatar"
        app:layout_constraintTop_toTopOf="@id/imgAvatar" />

    <TextView
        android:id="@+id/textPublished"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:text="@string/Published"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar"
        app:layout_constraintStart_toEndOf="@id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@id/textAuthor" />



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="imgAvatar, textPublished, menuAvatar" />

    <TextView
        android:id="@+id/textContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="8dp"
        android:autoLink="web"
        android:text="@string/textContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textContent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuAvatar"
        style="@style/AppCheckableButton"
        android:layout_width="34dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        app:icon="@drawable/menu_avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textAuthor"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_avatars"
        app:iconTint="@color/cardview_dark_background"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeAvatarViews"
        style="@style/AppCheckableButton"
        android:layout_width="83dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="4dp"
        android:text="100K"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/selector_like_color"
        app:icon="@drawable/selector_likes"
        app:iconPadding="2dp"
        app:iconTint="@color/selector_like_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareAvatarsView"
        style="@style/AppCheckableButton"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="4dp"
        android:text="22K"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/cardview_dark_background"
        app:icon="@drawable/share_avatars"
        app:iconTint="@color/cardview_dark_background"
        app:layout_constraintStart_toEndOf="@+id/likeAvatarViews"
        app:layout_constraintTop_toBottomOf="@+id/textContent"
        app:srcCompat="@drawable/share_avatars" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewsAvatarView"
        style="@style/AppCheckableButton"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="4dp"
        android:text="98K"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/cardview_dark_background"
        app:icon="@drawable/views_avatars"
        app:iconTint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textContent" />


</androidx.constraintlayout.widget.ConstraintLayout>